fix invisible img's

--- a/style.css
+++ b/style.css
@@ -18,14 +18,14 @@ body {
   background-size: cover;
 }
 
-body::after {
+/* body::after { */
   /* content: "";
   position: absolute;
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  z-index: -1; */
-}
+  z-index: -1; 
+} */
 
 .input {
   display: flex;
